--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Give me Five",
+  "name": "give_me_five",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
